--- a/crosschain-rewards/package.json
+++ b/crosschain-rewards/package.json
@@ -16,6 +16,7 @@
     "chai": "^4.3.7",
     "ethers": "^6.7.0",
     "hardhat": "^2.17.1",
+    "hardhat-deploy": "^0.11.37",
     "mocha": "^10.2.0",
     "typechain": "^8.3.1",
     "typescript": "^5.1.6",
